#61[Lokesh] Fixed the collapse button responsive bug

--- a/core/static/css/v2/pages/album/slide_show.less
+++ b/core/static/css/v2/pages/album/slide_show.less
@@ -26,7 +26,7 @@
                     border: 0px;
                     z-index: 1;
                     margin: 0px;
-                    margin-top: 7%;
+                    margin-top: 26px;
                     padding: 0px;
                     &:hover{
                         background-color: transparent ;
